fix: social link alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ ul {
 
 .social-links {
     float: right;
+    padding: 2px 0 0 0;
 }
 
 .collaborate-button {
